@@ -8,6 +8,6 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: docker run --privileged -e "container=docker" --tmpfs /run -v /sys/fs/cgroup:/sys/fs/cgroup:ro -d --name ubuntu ubuntu:16.04 /sbin/init
-      - run: docker exec -e BUNDLE_GEMFILE=/var/www/html/INTER-Mediator/dist-docs/docker/Gemfile -e DISPLAY=:99.0 -it ubuntu sh -c "apt-get update && apt-get -y install ruby git; git clone https://github.com/matsuo/INTER-Mediator; cd INTER-Mediator; git checkout ubuntu1604; gem install itamae --no-doc; itamae local dist-docs/vm-for-trial/recipe.rb; echo y | sh /var/www/html/INTER-Mediator/dist-docs/vm-for-trial/dbupdate.sh; /etc/rc.local; bundle; phpunit --configuration /var/www/html/INTER-Mediator/INTER-Mediator-UnitTest/phpunit.xml /var/www/html/INTER-Mediator/INTER-Mediator-UnitTest/INTERMediator_AllTests.php; /usr/local/bin/buster-test -r specification -c /var/www/html/INTER-Mediator/spec/buster.js; rspec --default-path=/var/www/html/INTER-Mediator/dist-docs/docker/spec -f doc -c /var/www/html/INTER-Mediator/dist-docs/docker/spec/samples/samples_spec.rb"
+      - run: docker exec -e BUNDLE_GEMFILE=/var/www/html/INTER-Mediator/dist-docs/docker/Gemfile -e DISPLAY=:99.0 -it ubuntu sh -c "apt-get update && apt-get -y install ruby git; git clone https://github.com/INTER-Mediator/INTER-Mediator; cd INTER-Mediator; git checkout master; gem install itamae --no-doc; itamae local dist-docs/vm-for-trial/recipe.rb; echo y | sh /var/www/html/INTER-Mediator/dist-docs/vm-for-trial/dbupdate.sh; /etc/rc.local; bundle; phpunit --configuration /var/www/html/INTER-Mediator/INTER-Mediator-UnitTest/phpunit.xml /var/www/html/INTER-Mediator/INTER-Mediator-UnitTest/INTERMediator_AllTests.php; /usr/local/bin/buster-test -r specification -c /var/www/html/INTER-Mediator/spec/buster.js; rspec --default-path=/var/www/html/INTER-Mediator/dist-docs/docker/spec -f doc -c /var/www/html/INTER-Mediator/dist-docs/docker/spec/samples/samples_spec.rb"
       - run: docker stop ubuntu
       - run: docker rm ubuntu
