@@ -1,1 +1,1 @@
-{"version":"5.7-dev","releasedate":"2018-01-09"}
+{"version":"5.7-dev","releasedate":"2018-01-11"}
