@@ -76,6 +76,7 @@ Ver.5.7-dev (in development)
 - IMLibFormat object is added, and it's a devided portion of INTERMediatorLib object.
   INTER-Mediator-Format.js file contains IMLibFormat object.
 - All functions have 'use strict';.
+- Update deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine and CI.
 - [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
 - [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
 - [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
